--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.56.2",
     "react-router-dom": "6.30.0",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.5",
     "zod": "^3.24.4"
