--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.56.2",
     "react-router-dom": "6.30.0",
+    "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.5",
