--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@radix-ui/react-separator": "^1.1.5",
     "@radix-ui/react-slot": "^1.2.0",
     "@tailwindcss/vite": "^4.1.5",
+    "@tanstack/react-query": "^5.85.3",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.507.0",
