--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "zod": "^3.24.4"
   },
   "devDependencies": {
-    "@eslint/js": "^9.26.0",
-    "@rocketseat/eslint-config": "^2.2.2",
+    "@biomejs/biome": "2.2.0",
     "@types/node": "^22.15.3",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
@@ -49,6 +48,7 @@
     "tw-animate-css": "^1.2.9",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
+    "ultracite": "5.2.3",
     "vite": "^6.3.5"
   }
 }
