--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-dropdown-menu": "^2.1.13",
     "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-separator": "^1.1.5",
     "@radix-ui/react-slot": "^1.2.0",
@@ -25,6 +26,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.507.0",
     "react": "^19.1.0",
+    "react-day-picker": "^9.11.1",
     "react-dom": "^19.1.0",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.56.2",
